--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout_front.html.twig' %}
 
 {% block title %}G Blog | Ingreso{% endblock %}
 
@@ -6,21 +6,13 @@
     {{ encore_entry_link_tags('login') }}
 {% endblock %}
 
+{% block header %}{% endblock %}
+
 {% block body %}
     <div class="container">
         <div class="row vh-100 d-flex align-items-center">
             <div class="col-sm-6 col-10 offset-sm-3 offset-1 align-self-center">
                 <form method="post">
-                    {% if error %}
-                        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                    {% endif %}
-
-                    {% if app.user %}
-                        <div class="mb-3">
-                            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-                        </div>
-                    {% endif %}
-
                     <h1 class="mb-4 text-center">G Blog</h1>
 
                     <input type="text" value="{{ last_username }}" name="username" id="inputUsername" placeholder="Usuario" class="form-control" required autofocus>
@@ -34,6 +26,10 @@
                             <input type="checkbox" name="_remember_me"> Recuérdame
                         </label>
                     </div>
+
+                    {% if error %}
+                        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                    {% endif %}
 
                     <div class="panel panel-default mb-3">
                         <div class="panel-body text-center">
@@ -50,6 +46,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block footer %}{% endblock %}
 
 {% block javascripts %}
     {{ encore_entry_script_tags('login') }}
