--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -1,10 +1,12 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout_front.html.twig' %}
 
 {% block title %}G Blog | Registro{% endblock %}
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('register') }}
 {% endblock %}
+
+{% block header %}{% endblock %}
 
 {% block body %}
     <div class="container">
@@ -40,6 +42,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block footer %}{% endblock %}
 
 {% block javascripts %}
     {{ encore_entry_script_tags('register') }}
