--- a/templates/blog_back/post/show.html.twig
+++ b/templates/blog_back/post/show.html.twig
@@ -9,72 +9,81 @@
 
     <div class="col-12">
         {% if post.mainImage %}
-            <img class="img-fluid thumbnail" src="{{ asset('images/post/' ~ post.mainImage) }}" alt="Post main image">
+            <img class="img-fluid img-thumbnail" src="{{ asset('images/post/' ~ post.mainImage) }}" alt="Post main image">
         {% else %}
-            <img class="img-fluid thumbnail" src="https://via.placeholder.com/1920x1080" alt="Post main image fallback">
+            <img class="img-fluid img-thumbnail" src="https://via.placeholder.com/1920x1080" alt="Post main image fallback">
+        {% endif %}
+
+
+        <div class="table-responsive">
+            <table class="table table-striped">
+                <tbody>
+                    <tr>
+                        <td># {{ post.id }} - <strong>{{ post.title }}</strong> por <em>{{ post.user.firstName ~ ' ' ~ post.user.lastName }}</em></td>
+                    </tr>
+                    <tr>
+                        <td>{{ post.body|raw }}</td>
+                    </tr>
+                    <tr>
+                        <td>Url: {{ post.url }}</td>
+                    </tr>
+                    <tr>
+                        <td>Rechazado: {{ post.rejected ? 'Yes' : 'No' }}</td>
+                    </tr>
+                    <tr>
+                        <td>Creado: {{ post.createdAt ? post.createdAt|ago: '' }}</td>
+                    </tr>
+                    <tr>
+                        <td>Actualizado: {{ post.updatedAt ? post.updatedAt|ago : '' }}</td>
+                    </tr>
+                    <tr>
+                        <td>Likes: {{ post.likes ? post.likes : 0 }}</td>
+                    </tr>
+                </tbody>
+            </table>
+         </div>
+
+        <a href="{{ path('dashboard') }}">Volver</a>
+
+        {% if not post.rejected and post.visible %}
+            <a class="" href="{{ path('post', {'url': post.url}) }}" target="_blank">Ver</a>
+        {% else %}
+            <a class="" href="{{ path('post_preview', {'url': post.url}) }}" target="_blank" rel="nofollow">Vista previa</a>
+        {% endif %}
+
+        <a class="" href="{{ path('post_show', {'id': post.id}) }}">Info</a>
+
+        {% if post.user.id == app.user.id %}
+            <a class="" href="{{ path('post_edit', {'id': post.id}) }}">Editar</a>
+
+            {{ include('blog_back/post/_delete_form.html.twig') }}
+        {% endif %}
+
+        {% if 'ROLE_ADMIN' in app.user.getRoles() == true %}
+            {% if not post.rejected %}
+                {{ include('blog_back/post/_reject_form.html.twig') }}
+            {% else %}
+                {{ include('blog_back/post/_unreject_form.html.twig') }}
+            {% endif %}
         {% endif %}
     </div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <td># {{ post.id }}  - <strong>{{ post.title }}</strong> por <em>{{ post.user.firstName ~ ' ' ~ post.user.lastName }}</em></td>
-            </tr>
-            <tr>
-                <td>{{ post.body|raw }}</td>
-            </tr>
-            <tr>
-                <th>Url</th>
-                <td>{{ post.url }}</td>
-            </tr>
-            <tr>
-                <th>Rechazado</th>
-                <td>{{ post.rejected ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>Creado</th>
-                <td>{{ post.createdAt ? post.createdAt|ago: '' }}</td>
-            </tr>
-            <tr>
-                <th>Actualizado</th>
-                <td>{{ post.updatedAt ? post.updatedAt|ago : '' }}</td>
-            </tr>
-            <tr>
-                <th>Likes</th>
-                <td>{{ post.likes ? post.likes : 0 }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="col-12 mt-3">
+        <h2 class="mb-3">Comentarios <span class="badge badge-dark"><small>{{ post.comments|length }}</small></span></h2>
 
-    <a href="{{ path('dashboard') }}">Volver</a>
-
-    {% if not post.rejected and post.visible %}
-        <a class="" href="{{ path('post', {'url': post.url}) }}" target="_blank">Ver</a>
-    {% else %}
-        <a class="" href="{{ path('post_preview', {'url': post.url}) }}" target="_blank" rel="nofollow">Vista previa</a>
-    {% endif %}
-
-   <a class="" href="{{ path('post_show', {'id': post.id}) }}">Info</a>
-
-    {% if post.user.id == app.user.id %}
-        <a class="" href="{{ path('post_edit', {'id': post.id}) }}">Editar</a>
-
-        {{ include('blog_back/post/_delete_form.html.twig') }}
-    {% endif %}
-
-    {% if 'ROLE_ADMIN' in app.user.getRoles() == true %}
-        {% if not post.rejected %}
-            {{ include('blog_back/post/_reject_form.html.twig') }}
-        {% else %}
-            {{ include('blog_back/post/_unreject_form.html.twig') }}
-        {% endif %}
-    {% endif %}
-
-    <div class="col-12">
-        <h2>Comentarios</h2>
-
-        {% for coment in post.comments %}
-
+        {% for comment in post.comments %}
+            <div class="media">
+                {% if comment.user.profileImage %}
+                    <img class="comment-user-image rounded-circle mr-3" src="{{ asset('images/user' ~ comment.user.profileImage) }}" class="mr-3" alt="G Blog | User {{ comment.user.firstName ~ ' ' ~ comment.user.lastName }}">
+                {% else %}
+                    <img class="comment-user-image rounded-circle mr-3" src="{{ asset('build/images/user.png') }}" alt="Post main image fallback">
+                {% endif %}
+                <div class="media-body">
+                    <h5 class="mt-3 d-inline">{{ comment.user.firstName ~ ' ' ~ comment.user.lastName }}</h5> <small>{{ comment.createdAt|ago }}</small>
+                    <br>
+                    {{ comment.message|raw }}
+                </div>
+            </div>
         {% else %}
             <tr>
                 <td colspan="11">No hay comentarios</td>
