Admin layout in progress / Pending user management

--- a/templates/blog_back/post/_reject_form.html.twig
+++ b/templates/blog_back/post/_reject_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('post_reject', {'id': post.id}) }}" onsubmit="return confirm('¿Está seguro que desea rechazar esta publicación?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ post.id) }}">
-    <button class="btn">Rechazar</button>
+    <button class="btn btn-sm btn-warning">Rechazar</button>
 </form>
