--- a/templates/blog_back/post/edit.html.twig
+++ b/templates/blog_back/post/edit.html.twig
@@ -5,5 +5,5 @@
 {% block body %}
     <h1>Editar publicación</h1>
 
-    {{ include('blog_back/post/_form.html.twig', {'button_label': 'Actualizar'}) }}
+    {{ include('blog_back/post/_form.html.twig', {'button_label': 'Actualizar', 'button_class': 'primary'}) }}
 {% endblock %}
