--- a/assets/css/back.css
+++ b/assets/css/back.css
@@ -1,3 +1,19 @@
+.container--back {
+    padding-top: 80px;
+    padding-bottom: 80px;
+    min-height: calc(100vh - 56px);;
+}
+
+a.copyrights:hover {
+    color: #fff !important;
+    text-decoration: none;
+}
+
+.user-profile-image {
+    height: 25px;
+    margin-right: 5px;
+}
+
 /* Cropper */
 .cropper img {
     width: 100%;
