--- a/templates/blog_back/dashboard.html.twig
+++ b/templates/blog_back/dashboard.html.twig
@@ -3,78 +3,86 @@
 {% block title %}G Blog - Mi cuenta{% endblock %}
 
 {% block body %}
-    <h1>Mis publicaciones</h1>
-    <div class="pull-right">
-        {% if 'ROLE_ADMIN' in app.user.getRoles() == true %}
-            <a class="" href="{{ path('post_manage') }}">Gestionar publicaciones</a>
-        {% endif %}
-    </div>
-
-    <div class="table-responsive">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Título</th>
-                    <th>Imagen</th>
-                    <th>Autor</th>
-                    <th>Enlace</th>
-                    <th>Rechazado</th>
-                    <th>Creado</th>
-                    <th>Actualizado</th>
-                    <th>Comentarios</th>
-                    <th>Likes</th>
-                    <th>acciones</th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for post in posts %}
-                <tr>
-                    <td>{{ post.id }}</td>
-                    <td>{{ post.title }}</td>
-                    <td>
-                        {% if post.mainImage %}
-                            <img class="post-main-image" src="{{ asset('images/post/' ~ post.mainImage) }}" alt="Post main image">
-                        {% else %}
-                            <img class="post-main-image" src="https://via.placeholder.com/1920x1080" alt="Post main image fallback">
-                        {% endif %}
-                    </td>
-                    <td><em>{{ post.user.firstName ~ ' ' ~ post.user.lastName }}</em></td>
-                    <td>{{ post.url }}</td>
-                    <td>{{ post.rejected ? 'Sí' : 'No' }}</td>
-                    <td>{{ post.createdAt ? post.createdAt|ago : '' }}</td>
-                    <td>{{ post.updatedAt ? post.updatedAt|ago : '' }}</td>
-                    <td>{{ post.comments|length }}</td>
-                    <td>{{ post.likes ? post.likes : 0 }}</td>
-                    <td>
-                        {% if not post.rejected and post.visible %}
-                            <a class="" href="{{ path('post', {'url': post.url}) }}" target="_blank">Ver</a>
-                        {% else %}
-                            <a class="" href="{{ path('post_preview', {'url': post.url}) }}" target="_blank" rel="nofollow">Vista previa</a>
-                        {% endif %}
-
-                    <a class="" href="{{ path('post_show', {'id': post.id}) }}">Info</a>
-
-                        {% if post.user.id == app.user.id %}
-                            <a class="" href="{{ path('post_edit', {'id': post.id}) }}">Editar</a>
-
-                            {{ include('blog_back/post/_delete_form.html.twig') }}
-                        {% endif %}
-
-                        {% if 'ROLE_ADMIN' in app.user.getRoles() == true %}
-                            {{ include('blog_back/post/_reject_form.html.twig') }}
-                        {% endif %}
-                    </td>
-                </tr>
+    <div class="col-12">
+        <div class="mb-3">
+            {% if 'ROLE_ADMIN' in app.user.getRoles() == true %}
+                <h1 class="d-inline">Mis publicaciones</h1>
             {% else %}
-                <tr>
-                    <td colspan="11">No hay publicaciones de momento</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                <h1>Mis publicaciones</h1>
+            {% endif %}
+        </div>
+
+        <div class="table-responsive">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Imagen</th>
+                        <th>Título</th>
+                        <th>Autor</th>
+                        <th>Rechazado</th>
+                        <th>Creado</th>
+                        <th>Actualizado</th>
+                        <th>Comentarios</th>
+                        <th>Likes</th>
+                    </tr>
+                    <tr colspan="11"></tr>
+                </thead>
+                <tbody>
+                {% for post in posts %}
+                    <tr>
+                        <td>{{ post.id }}</td>
+                        <td>
+                            {% if post.mainImage %}
+                                <img class="post-main-image" src="{{ asset('images/post/' ~ post.mainImage) }}" alt="Post main image">
+                            {% else %}
+                                <img class="post-main-image" src="https://via.placeholder.com/1920x1080" alt="Post main image fallback">
+                            {% endif %}
+                        </td>
+                        <td>{{ post.title }}</td>
+                        <td><em>{{ post.user.firstName ~ ' ' ~ post.user.lastName }}</em></td>
+                        <td>{{ post.rejected ? 'Sí' : 'No' }}</td>
+                        <td>{{ post.createdAt ? post.createdAt|ago : '' }}</td>
+                        <td>{{ post.updatedAt ? post.updatedAt|ago : '' }}</td>
+                        <td>{{ post.comments|length }}</td>
+                        <td>{{ post.likes ? post.likes : 0 }}</td>
+                    </tr>
+                    <tr>
+                       <td colspan="11">
+                            <div class="btn-group float-right">
+                                {% if not post.rejected and post.visible %}
+                                    <a class="btn btn-sm btn-primary" href="{{ path('post', {'url': post.url}) }}" target="_blank">Ir a publicación</a>
+                                {% else %}
+                                    <a class="btn btn-sm btn-primary" href="{{ path('post_preview', {'url': post.url}) }}" target="_blank" rel="nofollow">Ir a publicación (vista previa)</a>
+                                {% endif %}
+
+                                <a class="btn btn-sm btn-info" href="{{ path('post_show', {'id': post.id}) }}">Ver</a>
+
+                                {% if post.user.id == app.user.id %}
+                                    <a class="btn btn-sm btn-secondary" href="{{ path('post_edit', {'id': post.id}) }}">Editar</a>
+
+                                    {{ include('blog_back/post/_delete_form.html.twig') }}
+                                {% endif %}
+
+                                {% if 'ROLE_ADMIN' in app.user.getRoles() == true %}
+                                    {% if not post.rejected %}
+                                        {{ include('blog_back/post/_reject_form.html.twig') }}
+                                    {% else %}
+                                        {{ include('blog_back/post/_unreject_form.html.twig') }}
+                                    {% endif %}
+                                {% endif %}
+                            </div>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="11"><blockquote>No hay publicaciones de momento</blockquote></td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+
+            <a class="btn btn-md btn-primary" href="{{ path('post_new') }}">Nueva publicación</a>
+        </div>
     </div>
-
-
-    <a href="{{ path('post_new') }}">Nueva publicación</a>
 {% endblock %}
