--- a/templates/blog_back/post/_delete_form.html.twig
+++ b/templates/blog_back/post/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form method="post" action="{{ path('post_delete', {'id': post.id}) }}" onsubmit="return confirm('¿Está seguro que desea eliminar esta publicación?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ post.id) }}">
-    <button class="btn">Eliminar</button>
+    <button class="btn btn-sm btn-danger">Eliminar</button>
 </form>
