--- a/templates/blog_back/post/_unreject_form.html.twig
+++ b/templates/blog_back/post/_unreject_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('post_unreject', {'id': post.id}) }}" onsubmit="return confirm('¿Está seguro que desea aceptar esta publicación?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ post.id) }}">
-    <button class="btn">Aprobar</button>
+    <button class="btn btn-sm btn-success">Aprobar</button>
 </form>
