--- a/templates/layout_back.html.twig
+++ b/templates/layout_back.html.twig
@@ -13,19 +13,43 @@
 
     <body>
         {% block header %}
-            {% if app.user %}
-            <div class="mb-3">
-                You are logged in as {{ app.user.firstName ~ ' ' ~ app.user.lastName }}
-                <a href="{{ path('dashboard') }}">Mi Cuenta</a>
-                <a href="{{ path('app_logout') }}">Logout</a>
-            </div>
-            {% else %}
-                <a href="{{ path('app_login') }}">Ingresar</a>
-                <a href="{{ path('register') }}">Registrame</a>
-            {% endif %}
+            <header>
+                <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+                    <a class="navbar-brand" href="{{ path('blog') }}">G Blog</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarCollapse">
+                        {% set currentRoute = app.request.attributes.get('_route') %}
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item{{ currentRoute == 'dashboard' ? ' active' : '' }}">
+                                <a class="nav-link" href="{{ path('dashboard') }}">Mis publicaciones</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    {% set profileImage = app.user.profileImage ? 'images/user' ~ app.user.profileImage : 'build/images/user.png'  %}
+                                    <img src="{{ asset(profileImage) }}" alt="User profile image" class="user-profile-image rounded-circle">
+                                    {{ app.user.firstName ~ ' ' ~ app.user.lastName }}
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                                <a class="dropdown-item" href="#">Mi perfil</a>
+                                </div>
+                            </li>
+                        </ul>
+
+                        {% if 'ROLE_ADMIN' in app.user.getRoles() == true %}
+                            <a class="btn btn.sm btn-outline-{{ currentRoute == 'post_manage' ? 'light' : 'secondary' }} float-right" href="{{ path('post_manage') }}">Gestionar publicaciones</a>
+                        {% endif %}
+                        {% if 'ROLE_SUPER_ADMIN' in app.user.getRoles() == true %}
+                            <a class="btn btn.sm btn-outline-{{ currentRoute == 'post_manage' ? 'light' : 'secondary' }} float-right" href="{{ path('post_manage') }}">Gestionar perfiles</a>
+                        {% endif %}
+                    </div>
+                </nav>
+            </header>
         {% endblock %}
 
-        <div class="container">
+        <div class="container container--back">
             <div class="row">
                 <div class="col-12">
                     {% for message in app.flashes('success') %}
@@ -45,7 +69,13 @@
             </div>
         </div>
 
-        {% block footer %}{% endblock %}
+        {% block footer %}
+            <footer class="footer mt-auto py-3 bg-dark">
+                <div class="container">
+                    <span class="text-muted">Desarrado por: <a class="copyrights text-muted" href="https://jormanespinoza.com">Jorman Espinoza</a></span>
+                </div>
+            </footer>
+        {% endblock %}
 
         {% block javascripts %}
             {{ encore_entry_script_tags('back') }}
