--- a/templates/blog_back/post/show.html.twig
+++ b/templates/blog_back/post/show.html.twig
@@ -10,7 +10,7 @@
     <div class="col-12">
         <div class="mb-3">
             {% if post.mainImage %}
-                <img class="img-fluid img-thumbnail" src="{{ asset('images/post/' ~ post.mainImage) }}" alt="Post main image">
+                <img class="img-fluid img-thumbnail" src="{{ asset('images/post/' ~ post.mainImage) }}" alt="{{ post.title }} main image">
             {% else %}
                 <img class="img-fluid img-thumbnail" src="https://via.placeholder.com/1920x1080" alt="Post main image fallback">
             {% endif %}
@@ -81,7 +81,7 @@
                     <img class="comment-user-image rounded-circle mr-3" src="{{ asset('build/images/user.png') }}" alt="Post main image fallback">
                 {% endif %}
                 <div class="media-body">
-                    <h5 class="mt-3 d-inline">{{ comment.user.firstName ~ ' ' ~ comment.user.lastName }}</h5> <small>{{ comment.createdAt|ago }}</small>
+                    <h5 class="mt-3 d-inline">{{ comment.user.firstName ~ ' ' ~ comment.user.lastName }}</h5> <span class="badge badge-dark">{{ comment.user.username }}</span> <small>{{ comment.createdAt|ago }}</small>
                     <br>
                     {{ comment.message|raw }}
                 </div>
@@ -90,7 +90,6 @@
             <tr>
                 <td colspan="11"><blockquote>No hay comentarios</blockquote></td>
             </tr>
-
         {% endfor %}
     </div>
 {% endblock %}
