--- a/templates/blog_back/user/show.html.twig
+++ b/templates/blog_back/user/show.html.twig
@@ -1,58 +1,97 @@
 {% extends 'layout_back.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}G Blog | Mi perfil{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <div class="col-12 mb-3">
+        <h1 class="d-inline">Mi perfil</h1> <a class="btn btn-sm btn-outline-dark float-right" href="{{ path('dashboard') }}">Volver</a>
+    </div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ user.id }}</td>
-            </tr>
-            <tr>
-                <th>Roles</th>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>FirstName</th>
-                <td>{{ user.firstName }}</td>
-            </tr>
-            <tr>
-                <th>LastName</th>
-                <td>{{ user.lastName }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ user.email }}</td>
-            </tr>
-            <tr>
-                <th>Username</th>
-                <td>{{ user.username }}</td>
-            </tr>
-            <tr>
-                <th>Password</th>
-                <td>{{ user.password }}</td>
-            </tr>
-            <tr>
-                <th>ProfileImage</th>
-                <td>{{ user.profileImage }}</td>
-            </tr>
-            <tr>
-                <th>CreatedAt</th>
-                <td>{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>UpdatedAt</th>
-                <td>{{ user.updatedAt ? user.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="col-sm-4">
+        <div class="mb-3">
+            {% if user.profileImage %}
+                <img class="img-fluid rounded-circle" src="{{ asset('images/user/' ~ app.user.profileImage) }}" alt="{{ user.fisrtName ~ ' ' ~ user.lastName }} profile image">
+            {% else %}
+                <img class="img-fluid rounded-circle" src="{{ asset('build/images/user.png') }}" alt="Profile image fallback">
+            {% endif %}
+        </div>
+    </div>
 
-    <a href="{{ path('user_index') }}">back to list</a>
+    <div class="col-sm-8">
+        <div class="table-responsive">
+            <table class="table table-striped">
+                <tbody>
+                    <tr>
+                        <th>Nombre</th>
+                        <td>{{ user.firstName }}</td>
+                    </tr>
+                    <tr>
+                        <th>Apellido</th>
+                        <td>{{ user.lastName}}</td>
+                    </tr>
+                     <tr>
+                        <th>Nombre de usuario</th>
+                        <td><span class="badge badge-dark">{{ user.username }}</span></td>
+                    </tr>
+                    <tr>
+                    <tr>
+                        <th>Rol</th>
+                        <td>
+                            {% for role in user.roles %}
+                                {% if role == 'ROLE_SUPER_ADMIN' %}
+                                    <span class="badge badge-info">super-administrador</span>
+                                {% elseif role == 'ROLE_ADMIN' %}
+                                    <span class="badge badge-dark">administrador</span>
+                                {% else %}
+                                    <span class="badge badge-primary">usuario</span>
+                                {% endif %}
+                            {% endfor %}
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Email</th>
+                        <td>{{ user.email }}</td>
+                    </tr>
+                    <tr>
+                        <th>Registrado</th>
+                        <td>{{ user.createdAt ? user.createdAt|ago : '' }}</td>
+                    </tr>
+                    <tr>
+                        <th>Actualizado</th>
+                        <td>{{ user.updatedAt ? user.updatedAt|ago : '' }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
-    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
+        <div class="btn-group float-right">
+            {% if user.id == app.user.id %}
+                <a class="btn btn-sm btn-secondary" href="{{ path('profile_edit', {'id': user.id}) }}">Editar</a>
+                <a href="{{ path('profile_edit_password', {'id' : user.id}) }}" class="btn btn-sm btn-dark">Cambiar contraseña</a>
+            {% endif %}
+        </div>
+    </div>
 
-    {{ include('user/_delete_form.html.twig') }}
+    <div class="col-12 mt-3">
+        <h2 class="mb-3">
+            Mis comentarios <span class="badge badge-dark"><small>{{ comments|length }}</small></span>
+        </h2>
+
+        {% for comment in comments %}
+            <div class="media">
+                {% if comment.post.mainImage %}
+                    <img class="comment-user-image mr-3" src="{{ asset('images/user' ~ comment.post.mainImage) }}" class="mr-3" alt="G Blog | {{ comment.post.title }}">
+                {% else %}
+                    <img class="comment-user-image mr-3" src="https://via.placeholder.com/1920x1080" alt="Post main image fallback">
+                {% endif %}
+                <div class="media-body">
+                    <h5 class="mt-3 d-inline">{{ comment.post.title }}</h5> <small>{{ comment.createdAt|ago }}</small>
+                    <br>
+                    {{ comment.message|raw }}
+                </div>
+            </div>
+        {% else %}
+            <blockquote>No hay comentarios</blockquote></td>
+        {% endfor %}
+    </div>
 {% endblock %}
