User profile image / User management / Access profiles / Profile editing

--- a/assets/css/back.css
+++ b/assets/css/back.css
@@ -14,6 +14,10 @@ a.copyrights:hover {
     margin-right: 5px;
 }
 
+.user-profile-image--md {
+    height: 50px;
+}
+
 /* Cropper */
 .cropper img {
     width: 100%;
