--- a/templates/layout_back.html.twig
+++ b/templates/layout_back.html.twig
@@ -13,41 +13,7 @@
 
     <body>
         {% block header %}
-            <header>
-                <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                    <a class="navbar-brand" href="{{ path('blog') }}">G Blog</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-
-                    <div class="collapse navbar-collapse" id="navbarCollapse">
-                        {% set currentRoute = app.request.attributes.get('_route') %}
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item{{ currentRoute == 'dashboard' ? ' active' : '' }}">
-                                <a class="nav-link" href="{{ path('dashboard') }}">Mis publicaciones</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    {% set profileImage = app.user.profileImage ? 'images/user' ~ app.user.profileImage : 'build/images/user.png'  %}
-                                    <img src="{{ asset(profileImage) }}" alt="User profile image" class="user-profile-image rounded-circle">
-                                    {{ app.user.firstName ~ ' ' ~ app.user.lastName }}
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="dropdown01">
-                                <a class="dropdown-item" href="{{ path('profile', {'id': app.user.getId() }) }}">Mi perfil</a>
-                                <a class="dropdown-item" href="{{ path('app_logout') }}">Cerrar sesión</a>
-                                </div>
-                            </li>
-                        </ul>
-
-                        {% if 'ROLE_ADMIN' in app.user.getRoles() == true %}
-                            <a class="btn btn.sm btn-outline-{{ currentRoute == 'post_manage' ? 'light' : 'secondary' }} float-right" href="{{ path('post_manage') }}">Gestionar publicaciones</a>
-                        {% endif %}
-                        {% if 'ROLE_SUPER_ADMIN' in app.user.getRoles() == true %}
-                            <a class="btn btn.sm btn-outline-{{ currentRoute == 'post_manage' ? 'light' : 'secondary' }} float-right" href="{{ path('post_manage') }}">Gestionar perfiles</a>
-                        {% endif %}
-                    </div>
-                </nav>
-            </header>
+            {{ render(controller('App\\Controller\\SecurityController::getUserData', {'user': app.user.id, 'route': app.request.attributes.get('_route')} )) }}
         {% endblock %}
 
         <div class="container container--back">
