--- a/templates/blog_front/post.html.twig
+++ b/templates/blog_front/post.html.twig
@@ -12,7 +12,71 @@
 {% endblock %}
 
 {% block body %}
-    {{ dump(post) }}
+    <div class="col-12">
+        <h1 class="mt-4">{{ post.title }}</h1>
+
+        <p class="lead">
+          por <em>{{ post.user.firstName ~ ' ' ~ post.user.lastName }}</em> <small class="badge badge-sm badge-light ml-1">{{ post.createdAt|ago }}</small>
+        </p>
+
+        <hr>
+
+        <div class="mb-3">
+            {% if post.mainImage %}
+                <img class="img-fluid" src="{{ asset('images/post/' ~ post.mainImage) }}" alt="G Blog | {{ post.title }}">
+            {% else %}
+                <img class="img-fluid" src="https://via.placeholder.com/1920x1080" alt="Imagen de la publicación">
+            {% endif %}
+        </div>
+
+        <hr>
+
+        <!-- Post Content -->
+        <div class="content">
+            {{ post.body|raw }}
+        </div>
+
+        <hr>
+
+        <ul class="list-group list-group-horizontal">
+            <li class="list-group-item">
+                <svg class="bi bi-chat-square-dots-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.5a1 1 0 0 0-.8.4l-1.9 2.533a1 1 0 0 1-1.6 0L5.3 12.4a1 1 0 0 0-.8-.4H2a2 2 0 0 1-2-2V2zm5 4a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+                </svg>
+                <span class="badge badge-info post-comments-count">{{ post.comments|length }}</span>
+            </li>
+            <li class="list-group-item">
+                <svg class="bi bi-heart" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                </svg>
+                    <span class="badge badge-danger post-likes-count">{{ post.likes ? post.likes : 0 }}</span>
+            </li>
+        </ul>
+
+        <hr>
+
+        {% if app.user is not null %}
+            <div class="card my-4">
+                <h5 class="card-header">Deja un comentario</h5>
+                <div class="card-body">
+                    <form id="comment-frm">
+                        <div class="form-group">
+                            <textarea class="form-control" rows="3" id="comment" name="comment" required></textarea>
+                            <input type="hidden" name="post" id="post" value="{{ post.id }}">
+                            <input type="hidden" name="user" id="user" value="{{ app.user.id }}">
+                        </div>
+
+                        <button type="submit" class="btn btn-secondary">Enviar</button>
+                    </form>
+                </div>
+            </div>
+        {% endif %}
+
+
+        <div id="post-comments">
+            {{ render(controller('App\\Controller\\FrontController::getPostComments', {'post': post.id} )) }}
+        </div>
+    </div>
 {% endblock %}
 
 {% block javascripts %}
