--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -19,19 +19,19 @@
                         </div>
                     {% endfor %}
 
-                    <h1 class="mb-4 text-center">G Blog | Registro</h1>
+                    <a href="{{ path('blog') }}"><h1 class="mb-4 text-center text-white">G Blog</h1></a>
 
                     {{ form_row(form, {'label': ' '}) }}
 
                     <div class="panel panel-default mb-3">
-                        <div class="panel-body text-center">
+                        <div class="panel-body text-center text-info">
                             ¿Éstas registrado? |
-                            <a class="pull-right" href="{{ path('app_login') }}">Ingresar</a>
+                            <a class="pull-right text-muted" href="{{ path('app_login') }}">Ingresar</a>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <button type="submit" class="btn btn-success btn-lg btn-block">Registrar</button>
+                        <button type="submit" class="btn btn-secondary btn-lg btn-block">Registrar</button>
                     </div>
 
                     <div id="form-error"></div>
