--- a/templates/blog_back/post/_form.html.twig
+++ b/templates/blog_back/post/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn btn-lg btn-block btn-{{ button_class|default('success') }}">{{ button_label|default('Agregar') }}</button>
+    <button type="submit" class="btn btn-lg btn-block btn-{{ button_class|default('success') }}">{{ button_label|default('Agregar') }}</button>
 {{ form_end(form) }}
