Preparing readme.md file

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -27,7 +27,7 @@
 
             <div class="col-sm-6 col-10 offset-sm-3 offset-1 align-self-center">
                 <form method="post">
-                     <a href="{{ path('blog') }}"><h1 class="mb-4 text-center text-white">G Blog</h1></a>
+                     <a href="{{ path('blog') }}"><h1 class="mb-4 text-center text-white logo">G Blog</h1></a>
 
                     <input type="text" value="{{ last_username }}" name="username" id="inputUsername" placeholder="Usuario" class="form-control mb-3" required autofocus>
 
