--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -33,7 +33,7 @@
                         </div>
                     {% endfor %}
 
-                    <a href="{{ path('blog') }}"><h1 class="mb-4 text-center text-white">G Blog</h1></a>
+                    <a href="{{ path('blog') }}"><h1 class="mb-4 text-center text-white logo">G Blog</h1></a>
 
                     {{ form_row(form, {'label': ' '}) }}
 
