--- a/templates/blog_front/blog.html.twig
+++ b/templates/blog_front/blog.html.twig
@@ -9,7 +9,7 @@
     <div class="col-12">
         <div class="jumbotron bg-dark">
             <h1 class="display-4 text-light">G Blog</h1>
-            <p class="lead text-white">Este es un blog de prueba | <small class="badge badge-secondary">Basando en Symfony 4</small></p>
+            <p class="lead text-white">Este es un blog de prueba | <small class="badge badge-secondary">Basado en Symfony 4</small></p>
             <hr class="my-4">
             <p class="text-white">Combinando jQuery, Boostrap 4 e integrando Webpack Encore para el manejo de assets y demás librerías.</p>
             <a class="btn btn-dark btn-lg" href="https://github.com/jormanespinoza/blogForG" role="button" target="blank">Repositorio de Github</a>
