--- a/templates/blog_front/blog.html.twig
+++ b/templates/blog_front/blog.html.twig
@@ -11,7 +11,7 @@
             <h1 class="display-4 text-light">G Blog</h1>
             <p class="lead text-white">Este es un blog de prueba | <small class="badge badge-secondary">Basado en Symfony 4</small></p>
             <hr class="my-4">
-            <p class="text-white">Combinando jQuery, Boostrap 4 e integrando Webpack Encore para el manejo de assets y demás librerías.</p>
+            <p class="text-white">Combinando jQuery, Boostrap 4, Twig e integrando Webpack Encore para el manejo de assets y demás librerías.</p>
             <a class="btn btn-dark btn-lg" href="https://github.com/jormanespinoza/blogForG" role="button" target="blank">Repositorio de Github</a>
         </div>
 
