--- a/assets/css/back.css
+++ b/assets/css/back.css
@@ -1,7 +1,7 @@
 .container--back {
     padding-top: 80px;
     padding-bottom: 80px;
-    min-height: calc(100vh - 56px);;
+    min-height: calc(100vh - 56px);
 }
 
 a.copyrights:hover {
